# cryptocurrency_rate

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  wait-for-rabbitmq.sh
api/: alembic.ini  config.py  db.py  locustfile.py  logger.py  main.py  models.py  schemas.py
api/migrations/: env.py
api/migrations/versions/: 2023_11_27_05_59-3b0cf7a3c09d_add_course.py
api/service/: rabbitmq.py
data_loader/: data_loader.py  loader.py  logger.py
data_loader/handlers/: binance.py  coingecko.py
